force-app/main/default/objects/RW_Payment_Details__c/RW_Payment_Details__c.object-meta.xml
<CustomObject>
    <label>SAP Receipt</label>
    <nameField>
        <displayFormat>PD-{00000000}</displayFormat>
        <label>Payment Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>