force-app/main/default/objects/RW_Payment_Details__c/fields/ADF_Interest_Accrued__c.field-meta.xml
<CustomField>
    <fullName>ADF_Interest_Accrued__c</fullName>
    <description>This field is used to fetch ADF interest from SAP.</description>
    <label>ADF Interest Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>