force-app/main/default/objects/RW_Payment_Details__c/fields/Balanced_ADF_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balanced_ADF_Amount__c</fullName>
    <description>This field is used to fetch the balanced ADF amount from SAP.</description>
    <label>Balanced ADF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>