force-app/main/default/objects/RW_Payment_Details__c/fields/EOI__c.field-meta.xml
<CustomField>
    <fullName>EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI</label>
    <referenceTo>RW_EOI__c</referenceTo>
    <relationshipName>Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>