force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Accounting_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Accounting_Document_Number__c</fullName>
    <label>Accounting Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>