force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>