force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Bank_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Reference_Number__c</fullName>
    <label>Bank Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>