force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Booking__c.field-meta.xml
<CustomField>
    <fullName>RW_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>