force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>