force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_Company_Code__c</fullName>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>