force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>RW_Customer_ID__c</fullName>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>