force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Demand__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>RW_Demand__c</referenceTo>
    <relationshipName>Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>