force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Document_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>RW_Document_Header_Text__c</fullName>
    <label>Document Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>