force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Favour_of__c.field-meta.xml
<CustomField>
    <fullName>RW_Favour_of__c</fullName>
    <label>Favour of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>