force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>RW_Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>