force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Iris_Synced__c.field-meta.xml
<CustomField>
    <fullName>RW_Iris_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Iris Synced</label>
    <type>Checkbox</type>
</CustomField>