force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>