force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>