force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Type__c</fullName>
    <formula>IF( OR(RW_Document_Type__c ==&apos;DE&apos;,RW_Document_Type__c==&apos;D1&apos;) , &apos;Refund&apos;,  IF(OR(RW_Document_Type__c ==&apos;DF&apos;,RW_Document_Type__c==&apos;DZ&apos;,RW_Document_Type__c==&apos;DT&apos;), &apos;Payments&apos;, IF(OR(RW_Document_Type__c ==&apos;DS&apos;,RW_Document_Type__c==&apos;DB&apos;),&apos;Discounts&apos;,&apos;&apos;) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>