force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Posting_Date__c</fullName>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>