force-app/main/default/objects/RW_Payment_Details__c/fields/RW_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>