force-app/main/default/objects/RW_Payment_Details__c/fields/RW_UniqueId__c.field-meta.xml
<CustomField>
    <fullName>RW_UniqueId__c</fullName>
    <formula>RW_Accounting_Document_Number__c +&apos;|&apos;+ RW_Fiscal_Year__c +&apos;|&apos;+ RW_Company_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueId</label>
    <type>Text</type>
</CustomField>