force-app/main/default/objects/RW_Payment_Details__c/fields/Send_Receipt_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_Receipt_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Receipt Letter</label>
    <type>Checkbox</type>
</CustomField>