force-app/main/default/objects/RW_Payment_Details__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <label>Payment Amount</label>
    <summarizedField>RW_Payment_Detail_Item__c.RW_Amount__c</summarizedField>
    <summaryForeignKey>RW_Payment_Detail_Item__c.RW_Payment_Details__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>